--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itet",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -98,7 +98,7 @@
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
     "react-native-paper": "^4.2.0",
-    "react-native-reanimated": "^1.13.1",
+    "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.9.0",
     "react-native-tab-view": "^2.15.2",
